--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <p class="statement">
       The following list of signatories agree that the type of debate they are interested
-      in partaking in with respect to a tech conference is that which involves tech.
+      in partaking in with respect to tech is that which involves tech.
     </p>
 
     <p class="statement">
